// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectSummary displays loading message when appropriate 1`] = `
<ObjectSummary>
  <div
    className="infobox"
  >
    <h2>
      Loading...
    </h2>
    <div />
  </div>
</ObjectSummary>
`;

exports[`ObjectSummary renders information from metadata when available 1`] = `
<ObjectSummary>
  <div
    className="infobox"
  >
    <h2>
      My title
    </h2>
    <div>
      <p>
        Hello 
        <b
          key="1"
        >
          world
        </b>
        !
      </p>
    </div>
    <Component
      pid="foo:123"
    >
      ObjectStatus
    </Component>
  </div>
</ObjectSummary>
`;
